# databricks_hacks_on_top

./: .gitignore  01-data-ingestion.py  02-run-transforms.py  03-fraud-detection.py  04-rag-pipeline.py  05-loan-eligibility.py  06-metric-view.py  07-deploy-genie.py  10-anomaly-patterns.py  10-fraud-rings.py  11-streaming-simulation.py  12-data-quality.py  13-human-impact.py  14-india-financial-landscape.py  15-dashboard-views.py  16-multilingual.py  17-transaction-graph.py  18-fraud-forecast.py  19-bhashabench-eval.py  20-accuracy-metrics.py  21-fraud-rings.py  99-test-mlflow.py  ACCURACY_METRICS.md  APP_GUIDE.md  ARCHITECTURE.md  BlackIce-Pitch-Deck.pptx  DATABRICKS_GUIDE.md  EXPANSION_PLAN.md  FINAL_PITCH.md  PRESENTATION.md  PROJECT_PLAN.md  README.md  SUBMISSION.md  TEAM_BRIEFING.md  TEST_GUIDE.md  generate-pitch-deck.js  package-lock.json  package.json
02-transforms/: gold_circular_chunks.sql  gold_fraud_alerts.sql  gold_schemes.sql  gold_transactions.sql  silver_circulars.sql  silver_schemes.sql  silver_transactions.sql
08-agent/: app.yaml  chat_ui.py  databricks.yml  mlflow.db  pyproject.toml  requirements.txt
08-agent/agent_server/: agent.py  evaluate_agent.py  start_server.py  utils.py
08-agent/scripts/: quickstart.py  start_app.py
raw_data/: download_geojson.py  generate_all_datasets.py  generate_fraud_guide.py  generate_fraud_rings.py  generate_upi_stats.py
